<resources>
    <string name="app_name">QuizNChill</string>
    <string name="facebook_app_id">521035771914571</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb521035771914571</string>
    <string name="Welcome">Welcome to</string>
    <string name="LetsGo">Let\'s go!</string>
    <string name="Name">QUIZ n CHILL</string>
    <string name="ChooseQuiz">Choose Quiz</string>
    <string name="ChooseOpponents">Choose Opponents</string>
    <string name="Personal">Personal</string>
    <string name="Public">Public</string>
    <string name="appTitle">Quiz N\' Chill</string>
    <string name="btnStartQuiz">Start Quiz!</string>
    <string name="btnCreateQuiz">Create new quiz!</string>
    <string name="questionHeader">"Question: "</string>
    <string name="AddedQuestionToast">The question is added</string>
    <string name="opret_ny_quiz">Create new quiz</string>
    <string name="quiz_navn">Quiz name</string>
    <string name="quiz_navn_hint">Quiz name</string>
    <string name="sp_rgsm_l_hint">Question</string>
    <string name="forkert_svar_hint">First wrong answer</string>
    <string name="rigtig_svar">Correct answer</string>
    <string name="det_rigtige_svar_hint">Correct answer</string>
    <string name="forkert_svar">Wrong answer</string>
    <string name="tilf_j_sp_rgsm_l">Add question</string>
    <string name="sp_rgsm_l">Question</string>
    <string name="ok">OK</string>
    <string name="v_du_tabte_quizzen">You lost the quiz</string>
    <string name="yay_du_vandt_quizzen">You won the quiz!</string>
    <string name="Personale">Personal</string>
    <string name="GameIsFinish">The game is finish</string>
    <string name="YouGotAGame">You got a game</string>
    <string name="WaitingForOpponentsToBeFinish">Waiting for opponents to finish</string>
    <string name="FriendsAreStillPlaying">Friends are still playing</string>
    <string name="forkert_svar_hint2">Second wrong answer</string>
    <string name="NotificationText">"Changes has happened in Quiz'N'Chill.  Go check it out "</string>
    <string name="winner">"Winner: "</string>
    <string name="playGamePrompt">Play game!</string>
    <string name="multipleWinners">More than one winner!</string>
    <string name="YouHaveFinishedTheQuiz">You have finished the quiz!</string>
    <string name="QuestionAdded">Question is added to the quiz</string>
    <string name="QuizIsAdded">The quiz is added</string>
</resources>
