<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnMainOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorHeadline"
        android:text="@string/LetsGo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFacebookLogin" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btnFacebookLogin"
        android:layout_width="195dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMenuTitel"
        app:layout_constraintVertical_bias="0.292" />

    <TextView
        android:id="@+id/tvMenuTitel"
        android:layout_width="379dp"
        android:layout_height="91dp"
        android:layout_marginBottom="464dp"
        android:autoText="true"
        android:text="@string/Name"
        android:textColor="@color/colorHeadline"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvMenyWelcome"
        android:layout_width="191dp"
        android:layout_height="50dp"
        android:text="@string/Welcome"
        android:textColor="@color/colorText"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/tvMenuTitel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611" />

</androidx.constraintlayout.widget.ConstraintLayout>